--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,27 +28,31 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/KTPM.jar
+dist.jar=${dist.dir}/DemoThamKhao.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/KTPM
+dist.jlink.output=${dist.jlink.dir}/DemoThamKhao
 excludes=
-file.reference.byte-buddy-1.8.15.jar=D:\\SourceCode\\Lib\\byte-buddy-1.8.15.jar
-file.reference.client-combined-3.141.59-sources.jar=D:\\SourceCode\\Lib\\client-combined-3.141.59-sources.jar
-file.reference.client-combined-3.141.59.jar=D:\\SourceCode\\Lib\\client-combined-3.141.59.jar
-file.reference.commons-exec-1.3.jar=D:\\SourceCode\\Lib\\commons-exec-1.3.jar
-file.reference.gson-2.8.6.jar=D:\\SourceCode\\Lib\\gson-2.8.6.jar
-file.reference.guava-25.0-jre.jar=D:\\SourceCode\\Lib\\guava-25.0-jre.jar
-file.reference.jcommander-1.27.jar=D:\\SourceCode\\Lib\\jcommander-1.27.jar
-file.reference.json-20200518.jar=D:\\SourceCode\\Lib\\json-20200518.jar
-file.reference.json-simple-1.1.1.jar=D:\\SourceCode\\Lib\\json-simple-1.1.1.jar
-file.reference.jsoup-1.13.1.jar=D:\\SourceCode\\Lib\\jsoup-1.13.1.jar
-file.reference.okhttp-3.11.0.jar=D:\\SourceCode\\Lib\\okhttp-3.11.0.jar
-file.reference.okio-1.14.0.jar=D:\\SourceCode\\Lib\\okio-1.14.0.jar
-file.reference.testng-6.8.5.jar=D:\\SourceCode\\Lib\\testng-6.8.5.jar
+file.reference.byte-buddy-1.8.15.jar=test\\lib\\byte-buddy-1.8.15.jar
+file.reference.client-combined-3.141.59-sources.jar=test\\lib\\client-combined-3.141.59-sources.jar
+file.reference.client-combined-3.141.59.jar=test\\lib\\client-combined-3.141.59.jar
+file.reference.commons-exec-1.3.jar=test\\lib\\commons-exec-1.3.jar
+file.reference.gson-2.8.6.jar=test\\lib\\gson-2.8.6.jar
+file.reference.guava-25.0-jre.jar=test\\lib\\guava-25.0-jre.jar
+file.reference.hamcrest-core-1.3.jar=test\\lib\\hamcrest-core-1.3.jar
+file.reference.jcommander-1.27.jar=test\\lib\\jcommander-1.27.jar
+file.reference.json-20200518.jar=test\\lib\\json-20200518.jar
+file.reference.json-simple-1.1.1.jar=test\\lib\\json-simple-1.1.1.jar
+file.reference.jsoup-1.13.1.jar=test\\lib\\jsoup-1.13.1.jar
+file.reference.junit-4.13.2.jar=test\\lib\\junit-4.13.2.jar
+file.reference.okhttp-3.11.0.jar=test\\lib\\okhttp-3.11.0.jar
+file.reference.okio-1.14.0.jar=test\\lib\\okio-1.14.0.jar
+file.reference.testng-6.8.5.jar=test\\lib\\testng-6.8.5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.testng-6.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,8 +61,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=15
-javac.target=15
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -68,10 +72,12 @@ javac.test.classpath=\
     ${file.reference.commons-exec-1.3.jar}:\
     ${file.reference.gson-2.8.6.jar}:\
     ${file.reference.guava-25.0-jre.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.jcommander-1.27.jar}:\
     ${file.reference.json-20200518.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsoup-1.13.1.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
     ${file.reference.okhttp-3.11.0.jar}:\
     ${file.reference.okio-1.14.0.jar}:\
     ${file.reference.testng-6.8.5.jar}
@@ -96,8 +102,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=KTPM
-main.class=ktpm.KTPM
+jlink.launcher.name=DemoThamKhao
+main.class=demothamkhao.DemoThamKhao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
