--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DemoThamKhao.jar
+dist.jar=${dist.dir}/Test_KTPM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DemoThamKhao
+dist.jlink.output=${dist.jlink.dir}/Test_KTPM
 excludes=
 file.reference.byte-buddy-1.8.15.jar=test\\lib\\byte-buddy-1.8.15.jar
 file.reference.client-combined-3.141.59-sources.jar=test\\lib\\client-combined-3.141.59-sources.jar
@@ -102,7 +102,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DemoThamKhao
+jlink.launcher.name=Test_KTPM
 main.class=demothamkhao.DemoThamKhao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
